--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -124,3 +124,14 @@ body{
   font-size: 50px;
   line-height: 1.2;
 }
+
+.static-div-center {
+  height: 100vh;
+  width: 100%;
+}
+.login-brand {
+  width: 40%;
+}
+.not-underline {
+  text-decoration: none;
+}
