--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -136,3 +136,35 @@ body{
 .not-underline {
   text-decoration: none;
 }
+.cloumn1 {
+    grid-template-columns: 1fr 2fr;
+}
+.username {
+    font-family: "Be Vietnam Pro", sans-serif;
+    font-weight: 800;
+    text-align: center;
+    font-size: 25px;
+}
+.rolename {
+    font-family: "Be Vietnam Pro", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+    text-align: center;
+}
+.titleofnav {
+    text-align: center;
+    text-decoration: underline;
+}
+.link-dark-hoverable {
+    color: rgb(109, 109, 109);
+}
+.link-dark-hoverable:hover {
+    color: #000000;
+}
+.adti {
+    text-decoration: underline;
+    text-align: center;
+}
+.container {
+    border-radius: 5px;
+}
