--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -230,3 +230,36 @@ body{
 .bg-printair-red {
     background-color: #f44032;
 }
+
+/* .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+  @keyframes fade {
+    from {opacity: .5}
+    to {opacity: 1}
+} */
+.slides {
+    position: absolute; /* Position slides absolutely within the container */
+    top: 0;
+    left: 0;
+    width: 100%; /* Ensure slides take up full width of container */
+    opacity: 0; /* Initially hide all slides */
+    transition: opacity 1s ease; /* Smooth opacity transition */
+}
+
+.fade {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.fade.show {
+    opacity: 1;
+}
+.slide-container {
+    position: relative; /* Ensure the container is positioned relatively */
+    width: 100%; /* Adjust width as needed */
+    height: 550px; /* Adjust height as needed */
+    overflow: hidden;
+}
